# browser-top

./: .gitignore  .wakatime-project  Cargo.toml  Makefile  README.md
frontend/: .prettierrc  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/views/: CpuInfo.tsx  index.ts
src/: main.rs  routes.rs  ws_handler.rs
