[package]
name = "browser-top"
version = "0.1.2"
authors = ["Ambuj Singh <ambujs89@gmail.com>"]
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.3.1"
serde = "1.0.152"
sysinfo = "0.28.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
serde_json = "1.0.94"
env_logger = "0.10.0"
actix-ws = "0.2.5"
futures-util = "0.3.26"
log = "0.4.17"

[dependencies.tokio]
version = "1.26.0"
features = ["stats", "rt", "rt-multi-thread", "tracing", "macros"]
